# JB-deadlock-detector-test-task

./: .gitignore  CMakeLists.txt  README.md
include/: safe_mutex.h
src/: deadlock_main.cpp  main.cpp  safe_mutex.cpp  safe_mutex_tests.cpp
